# pucp

./: README.md
EST218/c3/: envtat.R  (+3 more)
IEE240/: .gitignore  CMakeLists.txt  fuerte.s
IEE240/e2sim/: preg2.c  preg2ASM.asm  preg2ASMSIMD.asm
IEE240/ex1/: .gitignore  README.md  calc_asm.asm  pregunta2.c  pregunta3.c
IEE240/ex1-sim/: README.md  preg2  pregunta2.sh  taylor_sin.c  taylor_sin.s
IEE240/l1/pregunta2/: imhist.asm  testImhist.c
IEE240/l1r/: README.md
IEE240/lab1/: .gitignore
IEE240/lab1-simd/: README.md
IEE240/lab1-simd/data/: goldhill_gray.pgm
IEE240/lab1-simd/pregunta1/: myGCM.asm
IEE240/lab1-simd/pregunta2/: imhist.asm  imhist.sh  verifyImhist.py
IEE240/lab1/data/: img1.pgm  img2.pgm
IEE240/lab1/pregunta2/: imhist.asm  imhist.sh
IEE240/lab2-simd/: .gitignore  README.md
IEE240/lab2-simd/pregunta1/: avgFilterASM.asm  preg1.sh
IEE240/lab2-simd/pregunta2/: geometricSerieASM.asm  preg2.c  preg2.sh
IEE240/lab2/pregunta1/: .gitignore  preg1.c  preg1.sh
IEE240/lab2/pregunta2/: .gitignore  geometricSerieASM.asm  preg2.c
IEE240/lab3/: README.md  preg1.c  preg2.c
IEE240/lab4/: .gitignore  README.md  example.s  pc.c  pc.s
IEE240/lab4/codes/: effectASM.asm  effectSIMD.asm  preg.c
IEE240/lab4pc/: example.c  pc.c  pc.s
IEE240/pc1/: .gitignore  README.md  integral.asm  main.c  pc1.sh
IEE240/pc2/: func.asm  mv_mult.c
IEE240/pc3/: func.asm  mv_mult.c  preg1C.c  preg1asm.asm
IEE240/retos-old/: fuerte2.c  fuerte2.s  hello64.s
IEE240/retos4/: limite.asm  limite.c  varianza.asm  varianza.c
IEE240/retos5/: main.c  transp.s
IEE240/retos6/: 1.c  2.c
IEE240/s4/: asmpromedio.asm  main.c
INF265/: .gitignore  CMakeLists.txt
INF265/ai/: ACC2020-2_Lab6-20171878.ipynb  ACC2020-2_Lab6.ipynb  BusquedaMapa.ipynb  Laboratorio_8_ACC-20171878.ipynb  Laboratorio_8_ACC.ipynb  prueba.ipynb  the_maze.txt
INF265/ai/c3/: PracticaAgenteSolucionador.ipynb
INF265/ai/l7/: Laboratorio_7_2020_2_20171878.ipynb  Laboratorio_7_2020_2_Enunciado.ipynb  maze3.txt
INF265/c4/: calc.y  ejercicio2.y  parser.c  parser.h  parser.output
INF265/c5/: calc.c  calc.y
INF265/c6/: ejemplo  ejemploBaseGeneracionInterpretacion.y  lex.c
INF265/compiladores/: Laboratorio_AgenteReactivoSolucion.ipynb
INF265/compiladores/c1/: self.c
INF265/compiladores/c4/: calc.y
INF265/compiladores/c5/: calc.h  prueba.txt
INF265/compiladores/c6/: lex.c
INF265/compiladores/c8/: ejemplo3  ejemploBaseGeneracionInterpretacion4.y  ejemploBaseGeneracionInterpretacion7.y
INF265/compiladores/lab2/: lenguaje.y  project.y
INF265/compiladores/lab2-grupal/: prueba.txt
INF265/compiladores/lab3-grupal/: obsidian.y
INF265/compiladores/lab4-grupal/: prueba.txt
INF265/compiladores/lab5/: Laboratorio5-me.y  ejemplo_laboratorio5_me
INF265/compiladores/parcial/: Preg2_20171878.txt  Preg4_20171878.ods  ejemplo_preg2  ejemploobsd.txt  obsidian.y  preg2.y  y.tab.c
INF265/compiladores/practice/: lex.c
INF265/lab1/: analizador  lex.yy.c  prc.l
INF265/lab2/: parser.c  parser.h  parser.output
INF265/lab2-grupal/: obsidian.y
INF265/primera mitad/: .gitignore  CMakeLists.txt
INF265/primera mitad/c1/: analizadorLexicoBase.c
INF265/primera mitad/c6/: ejemplo  interpret.ods
INF265/primera mitad/c7/: ejemplo5  ejemploBaseGeneracionInterpretacion5.y
INF265/primera mitad/c8/: ejemplo6  ejemploBaseGeneracionInterpretacion.y  ejemploBaseGeneracionInterpretacion6.y
INF265/primera mitad/lab2-grupal/: obsidian-me.y
INF265/primera mitad/lab3-grupal/: prueba.txt
INF265/primera mitad/lab4-grupal/: README.txt  obsidian.y
INF265/primera mitad/lab5/: Laboratorio5.y  ejemplo_laboratorio5
INF265/primera mitad/parcial/: Preg1_20171878.txt  y.output
INF265/primera mitad/practice/: calc.y
INF281/: CMakeLists.txt  func-aux.cpp  func-aux.h
INF281/2018-1/lab6/: Bib_Func_Preg1.cpp  Bib_Func_Preg1.h  Bib_Func_Preg2.cpp  Bib_Func_Preg2.h  Perstamos.csv  main.cpp
INF281/2019-2/ex1/: FuncionesParte01Ex1.cpp  FuncionesParte01Ex1.h  FuncionesParte02Ex1.cpp  FuncionesParte02Ex1.h  ingreso.txt  p1.cpp  p2.cpp
INF281/2019-2/l1/: main.cpp
INF281/2019-2/lab3/: funciones.cpp  funciones.h  main.cpp
INF281/2019-2/lab5/: Funcioneslaboratorio05.cpp  Funcioneslaboratorio05.h  func-aux.h  main.cpp  stock.txt
INF281/2020-1/act1/: Alumno.cpp  Alumno.h
INF281/2020-1/lab3/: Alumno.cpp  Alumno.hpp  Miembro.cpp  Miembro.hpp  Persona.cpp  Persona.hpp  Profesor.cpp  Profesor.hpp
INF281/2020-1/lab4/: Alumno.cpp  Alumno.hpp  Persona.cpp  Persona.hpp  Profesor.cpp  Profesor.hpp  operators.cpp  operators.hpp  p1.cpp  p2.cpp
INF281/2020-2/c10/: Persona.cpp  Persona.hpp  PlLista.hpp  PlNodo.hpp  Plantilla.hpp  main.cpp
INF281/2020-2/c5/: main.cpp
INF281/2020-2/c5.2/: FuncionesDePunteros.cpp  FuncionesDePunteros.h  main.cpp
INF281/2020-2/c5.3/: ListaConCadenas.cpp  ListaConCadenas.hpp  ListaConEnteros.cpp  ListaConEnteros.hpp  ListaGenerica.cpp  ListaGenerica.hpp  main.cpp  personas.txt
INF281/2020-2/c6/: Cadena.cpp  Cadena.hpp  ClaseRectangulo.cpp  ClaseRectangulo.hpp  Rectangulo.cpp  Rectangulo.hpp  main.cpp
INF281/2020-2/c8/: Cilindro.cpp  Cilindro.hpp  Circulo.cpp  Circulo.hpp  Tuberia.cpp  Tuberia.hpp  main.cpp
INF281/2020-2/ex1/: FuncionesEx01_20202_Preg01.cpp  FuncionesEx01_20202_Preg01.h  FuncionesEx01_20202_Preg02.cpp  FuncionesEx01_20202_Preg02.h  p1.cpp  p2.cpp
INF281/2020-2/lab2/: func-aux.cpp  func.cpp  func.h  main.cpp
INF281/2020-2/lab3/: MedicosPacientes.cpp  MedicosPacientes.h  mainmed.cpp  prueba.txt
INF281/2020-2/lab4/: Laboratorio04_Funciones.cpp  Laboratorio04_Funciones.h  Pacientes-Atencion.csv  main.cpp
INF281/2020-2/lab5/: Laboratorio05_Funciones.cpp  Laboratorio05_Funciones.h  Pacientes-Atencion.csv  func-aux.cpp  func-aux.h  main.cpp
INF281/2020-2/lab6/: PriorityQueue.cpp  PriorityQueue.h  PriorityQueueEnteros.cpp  PriorityQueueEnteros.h  PriorityQueuePacientes.cpp  PriorityQueuePacientes.hpp  mainPrio.cpp  p2.cpp  prueba.txt
INF281/2020-2/lab7/: Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  func-aux.cpp  func-aux.h  p1.cpp  pruebamed.txt  pruebapac.txt
(+111 files in other folders)
